<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="splash">正在登录,请稍候......</string>
    <string name="app_name">My12306</string>
    <string name="login">登录</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">欢迎进入：</string>
    <string name="hello_world1">hello world!</string>
    <string name="test">My12306</string>
    <string name="User">用户名:</string>
    <string name="password">密码  :</string>
    <string name="buttonValue">复制</string>
    <string name="buttonValue1">清除</string>
    <string name="MyContact">我的联系人</string>
    <string name="MyCount">我的账户</string>
    <string name="MyPassWord">我的密码</string>
    <string name="Exit">退出登录</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_my_contact">我的联系人</string>
    <string name="title_activity_my_account">我的账户</string>
    <string name="title_activity_my_password">我的密码</string>
    <string name="title_activity_splash">12306</string>
    <string name="LoginIv">登录图像</string>
    <string name="input_edt">请输入账户</string>
    <string name="pass_edt">请输入密码</string>
    <string name="atuoLogin">自动登录</string>
    <string name="LostPassword">忘记密码 ?</string>

    <string-array name="list_data">
        <item>我的联系人</item>
        <item>我的账户</item>
        <item>我的密码</item>
    </string-array>

    <!-- 我的联系人 -->
    <string name="my_contact_add">添加</string>
    <string name="title_activity_my_new_contact">我的联系人</string>
    <!-- 添加联系人 -->
    <string name="title_activity_my_edit_contact">添加联系人</string>
    <string name="my_contact_del">删除</string>
    <string name="btnSave">保存</string>
    <!-- item_edit_contact.xml -->
    <string name="editName">姓名</string>

    <!-- activity_my_password.xml -->
    <string name="newPassword">输入新密码</string>
    <string name="againNewPassword">再次输入新密码</string>

    <!-- fragment_my -->
    <string name="titlea">我的信息</string>
    <!-- fragment_order -->
    <string name="titleb">样式一</string>
    <!-- fragment_ticket -->
    <string name="titlec">车票预订</string>
    <string name="title_activity_station_list">StationListActivity</string>
    <string name="title_activity_query_result">QueryResultActivity</string>
    <string name="title_activity_yu_ding_ticket">YuDingTicketActivity</string>

</resources>
