<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyPasswordActivity" >
   <EditText 
       android:id="@+id/newPassword"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/ivLogin"
       android:paddingLeft="5dp"
       android:layout_marginTop="40dp"
       android:drawablePadding="12dp"
       android:hint="@string/newPassword"
       android:inputType="textPassword"/>
   
   <EditText 
       android:id="@+id/againNewPassword"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/edtUsername"
       android:layout_marginTop="80dp"
       android:paddingLeft="5dp"
       android:drawablePadding="14dp"
       android:hint="@string/againNewPassword"
       android:inputType="textPassword"
       />
   
   	 <Button 
	     android:id="@+id/btnSavePassword"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_alignParentBottom="true"
	     android:background="@color/myblue"
	     android:text="@string/btnSave"/>

</RelativeLayout>
